# 3modes-lock

./: .gitignore  CMakeLists.txt  CODE_EXPLAINED.md  architecture-decision.txt  connections.md  encryption.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: deploy.yml
backend/: .env.example  README.md  SETUP-AWS.md  docker-compose.prod.yml  docker-compose.yml  requirements-dev.txt
backend/app/: Dockerfile  commands.py  database.py  main.py  mqtt_client.py  reachability.py  requirements.txt  schemas.py  security.py  ws.py
backend/eval_report/: report.json  report.txt
backend/mosquitto/: Dockerfile  mosquitto.conf
backend/tests/: conftest.py  test_auth.py  test_ble_pass.py  test_command_endpoint.py  test_commands.py  test_commands_usermgmt.py  test_confirm_pin.py  test_door_pin.py  test_events.py  test_mode.py  test_mqtt_wiring.py  test_reachability.py  test_security.py  test_temp_pin.py  test_users.py  test_wifi_scan.py  test_ws.py
backend/verifier/: Dockerfile
components/ble_ctrl/: CMakeLists.txt  ble_ctrl.c  ble_ctrl.h
components/button_ctrl/: CMakeLists.txt  button_ctrl.c
components/camera_ctrl/: CMakeLists.txt  camera_ctrl.c
components/cloud_verify_ctrl/: CMakeLists.txt  cloud_verify_ctrl.c
components/cloud_verify_ctrl/include/: cloud_verify_ctrl.h
components/confirm_pin/: CMakeLists.txt  confirm_pin.c  confirm_pin.h  (+1 more)
components/mqtt_ctrl/: CMakeLists.txt  cmd_verify.c  cmd_verify.h  mqtt_ctrl.c
components/mqtt_ctrl/include/: mqtt_ctrl.h  wifi_config.h.example
main/: CMakeLists.txt  idf_component.yml  main.c
(+58 files in other folders)
